--- a/index.ipynb
+++ b/index.ipynb
@@ -1,3 +1,16 @@
-# index.ipynb
-import numpy as np
-print("Test run: ", np.arange(5))
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello Binder!\")"
+   ]
+  }
+ ],
+ "metadata": {},
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
